--- a/singsing/src/main/resources/static/app/components/security/security.template.html
+++ b/singsing/src/main/resources/static/app/components/security/security.template.html
@@ -2,7 +2,7 @@
     <table id="securityList_table" class="table table-condensed table-bordered table-striped">
         <thead>
             <td>
-                Security
+                Security Level
             </td>
             <td>
                 Free Space
